chore: remove unnecessary comma

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 logo: 'images/eastvantage-logo.png',
                 description: "EVOX Portal v1.0 is a web application built using the PHP Drupal framework. It serves as a centralized portal where employees can view their daily time records, manage schedules, submit requests, and generate reports for payroll processing.",
                 image: 'images/eastvantage-full-logo-2.png',
-                tags: ['Drupal', 'CSS',],
+                tags: ['Drupal', 'CSS'],
                 features: [
                     'Daily time recording',
                     'Leave request',
